Added acrylics to new XAML, Status Bar and Taskbar now use system accent color to draw, and are acrylic.

--- a/src/MobileShell.csproj
+++ b/src/MobileShell.csproj
@@ -175,6 +175,6 @@
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>copy /Y $(TargetPath) C:\NETWORK_SHARE\$(TargetFileName)</PostBuildEvent>
+    <!-- <PostBuildEvent>copy /Y $(TargetPath) C:\NETWORK_SHARE\$(TargetFileName)</PostBuildEvent> -->
   </PropertyGroup>
 </Project>
